# sambot

./: .env.example  .gitignore  Dockerfile  MEMORY.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml
data/: MEMORY.md  backlog_memory.md
src/sambot/: __init__.py  config.py  db.py  logging_config.py  main.py  models.py
src/sambot/agent/: __init__.py  backlog.py  coder.py  loop.py  memory.py  test_runner.py  tools.py
src/sambot/github/: client.py  poller.py  pr.py  projects.py  webhooks.py
src/sambot/jobs/: __init__.py  worker.py
src/sambot/llm/: client.py  prompts.py
src/sambot/slack/: app.py  backlog_handler.py  commands.py  progress.py  questions.py  views.py
tests/: conftest.py  test_agent.py  test_app.py  test_config.py  test_models.py  test_poller.py  test_projects.py  test_webhooks.py
