[project]
name = "sambot"
version = "0.1.0"
description = "SDLC workflow automation — GitHub Projects + AI Agent + Slack + Claude"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "PyGithub>=2.5.0",
    "gql[httpx]>=3.5.0",
    "slack-bolt>=1.21.0",
    "anthropic>=0.42.0",
    "rq>=1.16.0",
    "redis>=5.2.0",
    "sqlmodel>=0.0.22",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",  # for FastAPI TestClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sambot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["sambot"]
